// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social buttons provides Facebook sign in 1`] = `
<a
  className="ant-btn ant-btn-facebook"
  href="https://auth.alpha.crypto.io/oauth2/authorize?redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth2response&response_type=code&client_id=3ik2sk5cufec8mlvbnk3ht9e9d&scope=openid+profile+email+phone+aws.cognito.signin.user.admin&identity_provider=Facebook"
  onClick={[Function]}
>
  <i
    className="anticon anticon-facebook"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="facebook"
      fill="currentColor"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-92.4 233.5h-63.9c-50.1 0-59.8 23.8-59.8 58.8v77.1h119.6l-15.6 120.7h-104V912H539.2V602.2H434.9V481.4h104.3v-89c0-103.3 63.1-159.6 155.3-159.6 44.2 0 82.1 3.3 93.2 4.8v107.9z"
      />
    </svg>
  </i>
  <span>
    Login with 
    Facebook
  </span>
</a>
`;

exports[`Social buttons provides Google sign in 1`] = `
<a
  className="ant-btn ant-btn-google"
  href="https://auth.alpha.crypto.io/oauth2/authorize?redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Foauth2response&response_type=code&client_id=3ik2sk5cufec8mlvbnk3ht9e9d&scope=openid+profile+email+phone+aws.cognito.signin.user.admin&identity_provider=Google"
  onClick={[Function]}
>
  <i
    className="anticon anticon-google"
  >
    <svg
      aria-hidden="true"
      className=""
      data-icon="google"
      fill="currentColor"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
      />
    </svg>
  </i>
  <span>
    Login with 
    Google
  </span>
</a>
`;
